Add Kasharite bios

--- a/people.html
+++ b/people.html
@@ -3,72 +3,141 @@
 
 
 <head>
-    <meta charset="UTF-16" />
-    <title>Iuncterra</title>
-    <link rel="stylesheet" href="style/stylesheet.css" type="text/css" />
-    <link rel="stylesheet" href="style/torillic.css" type="text/css" />
-    <script src="scripts/utils.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/11.0.0/markdown-it.min.js"></script>
-    <script src="scripts/markdown.js"></script>
-    <script src="scripts/maps.js"></script>
+  <meta charset="UTF-16" />
+  <title>Iuncterra</title>
+  <link rel="stylesheet" href="style/stylesheet.css" type="text/css" />
+  <link rel="stylesheet" href="style/torillic.css" type="text/css" />
+  <script src="scripts/utils.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/11.0.0/markdown-it.min.js"></script>
+  <script src="scripts/markdown.js"></script>
+  <script src="scripts/maps.js"></script>
 </head>
 
 
 <body>
-    <header id="home-page-header"></header>
+  <header id="home-page-header"></header>
 
-    <main>
-        <section class="wiki-page">
-          <ul id="contents"></ul>
-        </section>
+  <main>
+    <section class="wiki-page">
+      <ul id="contents"></ul>
+    </section>
 
-        <section id="daemons" class="wiki-page">
-          <h1>Daemons</h1>
+    <section class="wiki-page">
+      <h1 id="daemons">Daemons</h1>
 
-          <h2 id="Avikath">Avikath <a class="suffix ipa">ævikæθ</a></h2>
-          <i class="sub">Daemon of Greed</i>
-          <figure class="splashimg">
-            <img src="assets/people/avikath.png" />
-          </figure>
-          <p>Avikath is manifest from the greed of mortals. All who lust for gold, power, sexual conquest... These are her people.</p>
-          <p>In physical form, she manifests as a draconic figure, her scales made of pure gold, her body of coal. She dresses in pauper's 
-            rags, tattered scraps of leather ill befitting a gleaming visage of wealth such as she.</p>
-          <p>Avikath accepts the title <i>Mother of Dragons</i>, as all dragons in Iuncterra were birthed by her. As greed draws mortals to 
-          the mountains in search of hiddent riches, Avikath is drawn to mountain fey. It is her union with these fey which produces dragons.</p>
-          <p>Avikath has not given birth for several millenia, her attention in more recent years being drawn to the ever more ravenous greed of 
-            mortal rulers, them having developed a taste for acrueing obscene wealth. Without her dalliances with the mountain fey, dragon numbers 
-            are dwindling as they cannoy reproduce of their own accord.</p>
+      <h2 id="avikath">Avikath <a class="suffix ipa">ævikæθ</a></h2>
+      <i class="sub">Daemon of Greed</i>
+      <figure class="splashimg">
+        <img src="assets/people/avikath.png" />
+      </figure>
+      <p>Avikath is manifest from the greed of mortals. All who lust for gold, power, sexual conquest... These are her
+        people.</p>
+      <p>In physical form, she manifests as a draconic figure, her scales made of pure gold, her body of coal. She
+        dresses in pauper's
+        rags, tattered scraps of leather ill befitting a gleaming visage of wealth such as she.</p>
+      <p>Avikath accepts the title <i>Mother of Dragons</i>, as all dragons in Iuncterra were birthed by her. As greed
+        draws mortals to
+        the mountains in search of hiddent riches, Avikath is drawn to mountain fey. It is her union with these fey
+        which produces dragons.</p>
+      <p>Avikath has not given birth for several millenia, her attention in more recent years being drawn to the ever
+        more ravenous greed of
+        mortal rulers, them having developed a taste for acrueing obscene wealth. Without her dalliances with the
+        mountain fey, dragon numbers
+        are dwindling as they cannoy reproduce of their own accord.</p>
 
-          <h2 id="surtr">Surtr <a class="suffix ipa">sɜtɜ</a></h2>
-          <i class="sub">Daemon of Destrucive Intent</i>
-          <figure class="splashimg">
-            <img src="assets/people/surtr.png" />
-          </figure>
-          <p>Surtr is, plain and simple, the will to destroy. Motives are irrelevant, whether the destruction comes from righteous anger, from 
-            vengeance, from greed... So long as there is a mortal who wishes to see some one or some thing in ruins, Surtr will retain his power.</p>
-          <p>Surtr has fought under many daemon generals, but he owes allegience to none. He is happy to march to the banner of whomever looks set 
-            to strew the greatest destruction.</p>
-          <p>Once, when dragons ruled the skies and the mortal creatures of Iuncterra were vast wild beasts, Surtr was fully unchained. However, 
-            destruction does not always serve the interests of his fellow daemons... Making a deal with fey of the fertile lands where mortals would 
-            later cultivate the soil and thrive, <a href="#avikath">Avikath</a> crafted a muzzle for Surtr's snout which holds him back from unleashing utter anihilation upon 
-            the world.</p>
-          
-          <h2 id="zukothoth">Zukothoth <a class="suffix ipa">zukəʊtɒθ</a></h2>
-          <i class="sub">Daemon of Masochism</i>
-          <figure class="splashimg">
-            <img src="assets/people/zukothoth.png" />
-          </figure>
-          <p>Zukothoth is the desire we all keep buried to do dreadful and grevious harm to ourselves. The feeling that we deserve punishment, 
-            not for any particular wrong doing but simply by virtue of our being. That whatever dreadful fate we are doomed to endure is entirely 
-            just and, in fact, what's best for us.</p>
-          <p>Since the Uthgardt age, Zukothoth has been trapped in the material plane, at the base of Beorunna's Well. There at the cold edge of 
-            the world he whispers in the ears of any foolish enough to enter the haunted ruins, begging them to help him, to release him, to help 
-            him bring the end that all mortals secretly crave.</p>
+      <h2 id="surtr">Surtr <a class="suffix ipa">sɜtɜ</a></h2>
+      <i class="sub">Daemon of Destrucive Intent</i>
+      <figure class="splashimg">
+        <img src="assets/people/surtr.png" />
+      </figure>
+      <p>Surtr is, plain and simple, the will to destroy. Motives are irrelevant, whether the destruction comes from
+        righteous anger, from
+        vengeance, from greed... So long as there is a mortal who wishes to see some one or some thing in ruins, Surtr
+        will retain his power.</p>
+      <p>Surtr has fought under many daemon generals, but he owes allegience to none. He is happy to march to the banner
+        of whomever looks set
+        to strew the greatest destruction.</p>
+      <p>Once, when dragons ruled the skies and the mortal creatures of Iuncterra were vast wild beasts, Surtr was fully
+        unchained. However,
+        destruction does not always serve the interests of his fellow daemons... Making a deal with fey of the fertile
+        lands where mortals would
+        later cultivate the soil and thrive, <a href="#avikath">Avikath</a> crafted a muzzle for Surtr's snout which
+        holds him back from unleashing utter anihilation upon
+        the world.</p>
 
-        </section>
-    </main>
-    
-    <footer id="home-page-footer"></footer>
+      <h2 id="zukothoth">Zukothoth <a class="suffix ipa">zukəʊtɒθ</a></h2>
+      <i class="sub">Daemon of Masochism</i>
+      <figure class="splashimg">
+        <img src="assets/people/zukothoth.png" />
+      </figure>
+      <p>Zukothoth is the desire we all keep buried to do dreadful and grevious harm to ourselves. The feeling that we
+        deserve punishment,
+        not for any particular wrong doing but simply by virtue of our being. That whatever dreadful fate we are doomed
+        to endure is entirely
+        just and, in fact, what's best for us.</p>
+      <p>Since the Uthgardt age, Zukothoth has been trapped in the material plane, at the base of Beorunna's Well. There
+        at the cold edge of
+        the world he whispers in the ears of any foolish enough to enter the haunted ruins, begging them to help him, to
+        release him, to help
+        him bring the end that all mortals secretly crave.</p>
+
+    </section>
+
+    <section class="wiki-page">
+      <h1 id="kashar">Kashar</h1>
+
+      <h2 id="kash-pasanhara">Kash Pasanhara</h2>
+      <figure class="splashimg"><img src="assets/people/kashar/kash-pasanhara.png" /></figure>
+      <p>Sultan of Kashar, the inheritor of a millenium long legacy: the Kash dynasty. The previous Sultan, Tarcata,
+        undertook significant public works and expansion projects which made him popular among the people of Kashar, so
+        when his son inherited the Sultanate expectations were high. Unfortunately, this good will only served to make
+        Pasanhara complacent, lazy and entitled. The Kash legacy still carries weight and garners good will, but public
+        opinion is fast turning against this despotic leader.</p>
+
+      <h2 id="caritra-dhurta">Caritra Dhurta</h2>
+      <figure class="splashimg"><img src="assets/people/kashar/caritra-dhurta.png" /></figure>
+      <p>Highest advisor to the Sultan, the most powerful non-hereditary role in Kashar. The Caritra family were wealthy
+        and powerful before the fall of Bastion, so when they arrived in Kashar as refugees they were able to barter
+        their way into positions of power. Their ambition lives on in Dhurta, whose cunning and strategic mind has lead
+        her to the highest office in the Sultanate.</p>
+
+      <h2 id="pranja">Pranja</h2>
+      <figure class="splashimg"><img src="assets/people/kashar/pranja.png" /></figure>
+      <p>Most senior religious leader in Kashar, the personal priest to the Sultan and effective head of the Kasharite
+        faith. Keeper of the eternal flame. Even for a spiritualist, Pranja is somewhat eccentric. His deep connection
+        to the spirits of the desert make it difficult for him to focus on the physical world, giving him an
+        otherworldly and distant affect.</p>
+
+      <h2 id="kash-anandera">Kash Anandera</h2>
+      <figure class="splashimg"><img src="assets/people/kashar/kash-anandera.png" /></figure>
+      <p>Concubine recognised as the most legitimate, who has been chosen to bare the next Sultan. As pleasing to the
+        eye as she is the soul, this deeply affable women has the heart of both the Sultan and the people. Now that she
+        is in place, her central aim is to give the Sultan an heir to secure her status as Celebrated Mother.</p>
+
+      <h2 id="kash-suraska">Kash Suraska</h2>
+      <figure class="splashimg"><img src="assets/people/kashar/kash-suraska.png" /></figure>
+      <p>Mother of the Sultan, administers the Sultan's harem and gives counsel to new concubines. An experienced
+        negotiator and respected political figure, the Celebrated Mother holds more power through her influence than the
+        limited nature of her role would suggest.</p>
+
+      <h2 id="unna-kausala">Unna Kausala</h2>
+      <figure class="splashimg"><img src="assets/people/kashar/unna-kausala.png" /></figure>
+      <p>Leader of the Kasharite rebellion. Kausala is no stranger to the Sultan's brutality - as a child, she was a
+        servant in the royal palace, up until the juvenile Sultan threw hot oil over her in a tantrum. To keep her
+        silent, the Celebrated Mother had her sent to a temple to live out her days as a servant of the eternal flame.
+        She studied under Brahman Pranja and showed a real aptitude for martial arts, but her fiery temper made her a
+        dangerous element which he could only tolerate for so long. Cast out from the temple, she found a use for her
+        combat skills in the rebellion, rising through the ranks to eventually lead the entire movement.</p>
+
+      <h2 id="baal-adhikari">Baal Adhikari</h2>
+      <figure class="splashimg"><img src="assets/people/kashar/baal-adhikari.png" /></figure>
+      <p>Baal Adhikari was once captain of The Vengeance, then called The Sultan's Fist, until he was killed by Bertha
+        Bloodletter, who took control of the ship and crew.</p>
+
+    </section>
+  </main>
+
+  <footer id="home-page-footer"></footer>
 </body>
 
 </html>
