Add lore around dwarves and Kaiper

--- a/people.html
+++ b/people.html
@@ -84,6 +84,16 @@
     </section>
 
     <section class="wiki-page">
+      <h1 id="dragons">Dragons</h1>
+
+      <h2 id="kypra">Kypra <a class="suffix ipa">kaɪprɑ</a></h2>
+      <figure><img src="assets/people/dragons/kypra.webp" /></figure>
+
+      <h2 id="draconus">Draconus <a class="suffix ipa">drakəʊnəs</a></h2>
+      <figure class="splashimg"><img src="assets/people/dragons/draconus.png" /></figure>
+    </section>
+
+    <section class="wiki-page">
       <h1 id="kashar">Kashar</h1>
 
       <h2 id="kash-pasanhara">Kash Pasanhara</h2>
