More daemon types

--- a/species.html
+++ b/species.html
@@ -55,9 +55,12 @@
         appearance, power and personality of any given daemon comes from the concept they manifest from. For
         example, Surtr manifests from the will to destroy one's enemies, so takes the form of a vast roaring beast
         wreathed in flame.</p>
-      <h3>Seraphim</h3>
+      <h4>Seraphim <a class="suffix ipa">sɛrəfɪm</a></h4>
       <p>Some daemons, born of the more enjoyable or altruistic thoughts of mortals, draw a distinction between
-        themselves and other daemons.</p>
+        themselves and other daemons. Collectively they refer to themselves as seraphim, singular "seraph", or sometimes angels.</p>
+      <h4>Malefices <a class="suffix ipa">məlɛfɪsɪz</a></h4>
+      <p>In response to the seraphim, daemons born of the most malevolent and destructive thoughts also banded 
+        together. Collectively they are known as malefices, singular malefix.</p>
     </section>
 
     <section id="megalith" class="wiki-page">
