--- a/locations.html
+++ b/locations.html
@@ -31,9 +31,9 @@
       <h1 id="kashar">Kashar</h1>
       <p class="fullwidth">The Kashar Sultanate is a major power in the southern continent, ruling over a vast area rich in spices,
         precious metals and fine silks. The ruling family of Kashar are the Kash dynasty, an elven family whose rule
-        dates back over 10,000 years. Most citizens of Kashar are <a href=species.html#elves>elves</a>, but there are
-        also singificant populations of <a href=species.html#loxodon>loxodon</a> and <a
-          href=species.html#tabaxi>tabaxi</a>.</p>
+        dates back over 10,000 years. Most citizens of Kashar are <a href=species#elves>elves</a>, but there are
+        also singificant populations of <a href=species#loxodon>loxodon</a> and <a
+          href=species#tabaxi>tabaxi</a>.</p>
 
       <h2 id="kashar-governance">Governance</h2>
       <h4>The Sultan</h4>
@@ -141,19 +141,19 @@
       
       <h2 id="kashar-history">History</h2>
       <h4>The Nameless Wars</h4>
-      <p>Before it was an elven Sultanate, the land now called Kashar was a land of <a href="species.html#loxodon">loxodon</a>. It is known that the land was taken from them and the Sultanate established when the region was colonised by ancient elves, but little else is known of this period. Despite its violent colonial beginnings, <a href="species.html#loxodon">loxodon</a> now live freely in Kashar and consider themselves as much Kasharites as their elven countrymen, the conflicts of those times long forgotten.</p>
+      <p>Before it was an elven Sultanate, the land now called Kashar was a land of <a href="species#loxodon">loxodon</a>. It is known that the land was taken from them and the Sultanate established when the region was colonised by ancient elves, but little else is known of this period. Despite its violent colonial beginnings, <a href="species#loxodon">loxodon</a> now live freely in Kashar and consider themselves as much Kasharites as their elven countrymen, the conflicts of those times long forgotten.</p>
       <h4>The Lost Prince</h4>
       <p>During the reign of the Sultan Gaabith, his Celebrated Concubine, Aadit, mother of the heir, was stripped of her status and relegated to a basic concubine. This came after her husband learned of her affair with a djinn, a fey of the desert, after the child expected to be crown Prince was born a demi-fey. It is not known what became of the child, upon Gaabith's death the sultanate passed to Bhangiya, son of the Celebrated Concubine who took Aadit's place. Some in Kashar believe the child lives still, destined to return and claim their throne some day.</p>
 
       <h2 id="kashar-notable-figures">Notable Figures</h2>
       <ul>
-        <li><a href="people.html#kash-pasanhara">Kash Pasanhara</a></li>
-        <li><a href="people.html#caritra-dhurta">Caritra Dhurta</a></li>
-        <li><a href="people.html#pranja">Pranja</a></li>
-        <li><a href="people.html#kash-anandera">Kash Anandera</a></li>
-        <li><a href="people.html#kash-suraska">Kash Suraska</a></li>
-        <li><a href="people.html#unna-kausala">Unna Kausala</a></li>
-        <li><a href="people.html#baal-adhikari">Baal Adhikari</a></li>
+        <li><a href="people#kash-pasanhara">Kash Pasanhara</a></li>
+        <li><a href="people#caritra-dhurta">Caritra Dhurta</a></li>
+        <li><a href="people#pranja">Pranja</a></li>
+        <li><a href="people#kash-anandera">Kash Anandera</a></li>
+        <li><a href="people#kash-suraska">Kash Suraska</a></li>
+        <li><a href="people#unna-kausala">Unna Kausala</a></li>
+        <li><a href="people#baal-adhikari">Baal Adhikari</a></li>
       </ul>
     </section>
   </main>
