--- a/species.html
+++ b/species.html
@@ -65,7 +65,7 @@
       <h3 id="dwarves">Dwarves <a class="suffix ipa">dwɔvz</a></h3>
       <figure class="splashimg"><img src="assets/species/dwarf.png" /></figure>
       <p>Far off on the copper-rich island of Kaiper, an isolate of iotun evolved to be shorter in stature without 
-        losing their tremendous strength. Under the watchful eye of the copper dragon <a href="people.html#kypra">Kypra</a>, these isolated people 
+        losing their tremendous strength. Under the watchful eye of the copper dragon <a href="people#kypra">Kypra</a>, these isolated people 
         built a rich and complex culture, eventually travelling back to the main continent and establishing an 
         economic niche owing to their aptitude for mining and the vast quantity of valuable copper on their home 
         island.</p>
