Better daemon pics

--- a/cosmology.html
+++ b/cosmology.html
@@ -59,7 +59,7 @@
             <h3 id="avikath">Avikath <a class="suffix ipa">ævikæθ</a></h3>
             <i class="sub">Malefix of Greed</i>
             <figure class="splashimg">
-              <img src="assets/people/avikath.png" />
+              <img src="assets/cosmology/daemons/avikath.png" />
             </figure>
             <p>Avikath is manifest from the greed of mortals. All who lust for gold, power, sexual conquest... These are her
               people.</p>
@@ -79,7 +79,7 @@
             <h3 id="surtr">Surtr <a class="suffix ipa">sɜtɜ</a></h3>
             <i class="sub">Malefix of Destrucive Intent</i>
             <figure class="splashimg">
-              <img src="assets/people/surtr.png" />
+              <img src="assets/cosmology/daemons/surtr.png" />
             </figure>
             <p>Surtr is, plain and simple, the will to destroy. Motives are irrelevant, whether the destruction comes from
               righteous anger, from
@@ -99,7 +99,7 @@
             <h3 id="zukothoth">Zukothoth <a class="suffix ipa">zukəʊtɒθ</a></h3>
             <i class="sub">Malefix of Masochism</i>
             <figure class="splashimg">
-              <img src="assets/people/zukothoth.png" />
+              <img src="assets/cosmology/daemons/zukothoth.png" />
             </figure>
             <p>Zukothoth is the desire we all keep buried to do dreadful and grevious harm to ourselves. The feeling that we
               deserve punishment,
@@ -117,7 +117,7 @@
             <h3 id="erodite">Erodite <a class="suffix ipa">ərɒdɪteɪ</a></h3>
             <i class="sub">Daemon of Erotic Love</i>
             <figure class="splashimg">
-              <img src="assets/people/erodite.png" />
+              <img src="assets/cosmology/daemons/erodite.png" />
             </figure>
             <p>First of the three major love daemons, Erodite is manifest from raw sexual lust. Not greed, as with Avikath, but 
               not a longing for power or control, just pure and simple ativistic lust for a fellow sexual being. They are neither 
@@ -126,7 +126,7 @@
             <h3 id="ludonysos">Ludonysos <a class="suffix ipa">ludɒnɪsɒs</a></h3>
             <i class="sub">Daemon of Ludic Love</i>
             <figure class="splashimg">
-              <img src="assets/people/ludonysos.png" />
+              <img src="assets/cosmology/daemons/ludonysos.png" />
             </figure>
             <p>One of the three major love daemons, Ludonysos is manifest from playful love. Love for life, adventure, parties and 
               the pleasures of good company.</p>
@@ -134,7 +134,7 @@
             <h3 id="hestora">Hestora <a class="suffix ipa">hɛstɔrə</a></h3>
             <i class="sub">Daemon of Storgic Love</i>
             <figure class="splashimg">
-              <img src="assets/people/hestora.png" />
+              <img src="assets/cosmology/daemons/hestora.png" />
             </figure>
             <p>One of the three major love daemons, Hestora is manifest from loyal and dutiful love. The quiet love which sustains 
               us day to day, the tender love of placing a blanket over a sleeping friend, of a parent holding their newborn babe 
