Fix recursion on table of contents

--- a/cosmology.html
+++ b/cosmology.html
@@ -47,12 +47,12 @@
             more prevalent in the world, and diminish as it does.</p>
             
 
-            <h2>Seraphim <a class="suffix ipa">sɛrəfɪm</a></h2>
+            <h2 id="seraphim">Seraphim <a class="suffix ipa">sɛrəfɪm</a></h2>
             <p class="fullwidth">Daemons born of more pleasant, positive and altruistic thoughts refer to themselves as "seraphim" 
               (singular: seraph). Some mortals call them "angels".</p>
 
             <h3 id="ludonysos">Ludonysos <a class="suffix ipa">ludɒnɪsɒs</a></h3>
-            <i class="sub">Daemon of Ludic Love</i>
+            <i class="sub">Seraph of Ludic Love</i>
             <figure class="splashimg">
               <img src="assets/cosmology/daemons/ludonysos.png" />
             </figure>
@@ -60,7 +60,7 @@
               the pleasures of good company.</p>
             
             <h3 id="hestora">Hestora <a class="suffix ipa">hɛstɔrə</a></h3>
-            <i class="sub">Daemon of Storgic Love</i>
+            <i class="sub">Seraph of Storgic Love</i>
             <figure class="splashimg">
               <img src="assets/cosmology/daemons/hestora.png" />
             </figure>
