--- a/people.html
+++ b/people.html
@@ -24,10 +24,10 @@
 
     <section class="wiki-page">
       <h1 id="megaliths">Dragons</h1>
-  
+
       <h3 id="kypra">Kypra <a class="suffix ipa">kaɪprɑ</a></h3>
       <figure><img src="assets/people/dragons/kypra.webp" /></figure>
-  
+
       <h3 id="draconus">Draconus <a class="suffix ipa">drakəʊnəs</a></h3>
       <figure class="splashimg"><img src="assets/people/dragons/draconus.png" /></figure>
     </section>
@@ -82,6 +82,96 @@
       <figure class="splashimg"><img src="assets/people/kashar/baal-adhikari.png" /></figure>
       <p>Baal Adhikari was once captain of The Vengeance, then called The Sultan's Fist, until he was killed by Bertha
         Bloodletter, who took control of the ship and crew.</p>
+
+    </section>
+
+    <section class="wiki-page">
+      <h1 id="uthgardt">Uthgardt</h1>
+
+      <h3 id='haesta-þrumsdottr'>Fylkir Hæesta Þrumsdottr</h3>
+      <p>The Jarl of the Thunderbeast Tribe is a grim figure, rarely known to smile and certainly never to joke. Even as
+        a child, she was strangely quiet and focussed, owing to much of the mythos surrounding her. While she is a
+        capable warrior, her real strength lies in strategy: She always seems to be ten steps ahead of her enemy.
+        Ruthlessly pragmatic and single minded in her devotion to her tribe, the Fylkir is a force to be reckoned with.
+      </p>
+
+      <h3 id='slasverd-af-fylkir'>Freyr Slásverd af Fylkir</h3>
+      <p>Few in the land can say a bad word about Fylkir Haesta’s choice of husband, which is in part why he is her
+        choice of husband. This beloved prince of the Sky Pony tribe is a charming, handsome and courageous favourite
+        among both his own people and his adopted Thunderbeast kinsmen. How exactly this shining beacon of charm and
+        good will maintains a relationship with the grim, serious Fylkir is a mystery, but their union joins together
+        the largest military force in the region with an untapped agricultural powerhouse. Politically speaking, they
+        are the perfect match.</p>
+
+      <h3 id='vidar-norgandr'>Páfi Viðar Norgandr</h3>
+      <figure class="splashimg"><img src="assets/people/uthgardt/vidar-norgandr.png"></figure>
+      <p>Of those who oppose Jarl Haesta&#39;s claim to the Fylkiriate, the most prominent is the Jarl of the Grey Wolf
+        Tribe. Vidar is a vicious acolyte of the Old Ways and has more than earned his byname &quot;Norgandr&quot;
+        (Beast Of The North). He believes that Uthgar is best revered by tribes adhering to the dogma of their totems,
+        and that a central authority of the Uthgardt faith would fundamentally undermine its culture. A physically
+        intimidating figure, Vidar stands taller even than most Northlanders in his human form and larger than most
+        horses in wolf form.</p>
+
+      <h3 id='flugmaer-hrafndottr'>Jarl Flugmær Hrafndottr</h3>
+      <p>Flugmaer excells at two things: Flying and drinking. A tremendously skilled pilot, she rose to the role of Jarl
+        at a young age after her Father, Jarl Hrafn, was shot down by Neverwinter forces during a raid on an outlying
+        village. Flugmaer is a firm friend of Jarl Vidar of the Grey Wolf tribe, both politically and personally. While
+        the two have no plans at formalising their union through marriage, seeing such things as a Southern corruption
+        of the Old Ways, their romantic (or, at least, sexual) relationship is no secret.</p>
+
+      <h3 id='örmar-silfurorð'>Jarl Örmar Silfurorð</h3>
+      <p>One of the lesser known Uthgardt traditions is the sport of &quot;flyting&quot;, in which participants take
+        turns exchnging insults and personal jabs until one person surrenders. While there are certainly Uthgardt who
+        surpass Jarl Örmar in physical strength, they are absolutely unrivalled at flyting. Their keen gaze and cutting
+        wit can reduce even the burliest of bruisers to tears in a matter of minutes. While they acknowledge and offer
+        some support for Jarl Haesta&#39;s claim to the Fylkiriate, they have thus far held themselves back from any
+        major military maneuvers, exercising their influence slowly and strategically.</p>
+
+      <h3 id='veida-vikinginn'>Jarl Veida Vikinginn</h3>
+      <p>When tucking their children into beds at night, parents along the Sword Coast tell their children stories of
+        the fearsom Viking queen. Her red hair like fire, the scar running down the length of her face, her utter
+        ruthlessness and lack of a moral compass. In truth, Veida is a fairly personable and honourable sort, who sees
+        raiding as a sacred tradition of her people. By birth, she was heir to the Great Worm tribe, but when she felt
+        the call of the sea she left for the Red Tigers and quickly rose to become Jarl of this more worldly and
+        meritocratic tribe. Now her sister, Ormunda, rules in her place. The two have an icy and hostile relationship,
+        but family is family.</p>
+
+      <h3 id='smiður-bölvaður'>Jarl Smiður Bölvaður</h3>
+      <p>The Elk tribe were a tribe in decline - as kingdoms to the south began to expand, this comparatively peaceful
+        tribe lacked the strength of arms to protect their vital Elk herding lands from being taken over. It was Jarl
+        Smiður who restored them to glory once again, marrying his only son to Haesta and pledging supplies to the
+        reformation in exchange for protection from their expansionist neighbours. A patient and careful man, Jarl
+        Smiður is seen as weak and hesitant by many of his peers, but those who know him well know not to underestimate
+        him.</p>
+
+      <h3 id='norn-alfúrsdottr'>Jarl Norn Alfúrsdottr</h3>
+      <p>The Ghost Tree tribe are rarely seen, even by other Uthgardt tribes. These mysterious folk are intensely
+        attuned to the natural world and, unlike most Uthgardt, are adept casters. They have close links to the local
+        wood elf settlements, sharing a common interest in nature. So much so that their Jarl, Norn, is herself the
+        daughter of a wood elf couple who joined the tribe.</p>
+
+      <h3 id='thraell-svikari'>Jarl Thraell Svikari</h3>
+      <p>Jarl Thraell first came to the Uthgardt lands as a prisoner, but after winning his tournament fight he earned
+        membership of the Sky Pony tribe. Those who were there remember a spectacular fight in which the charming,
+        skillful Chondothan captive danced rings around his opponents and left no survivors. Thraell’s talent for
+        spectacle and entertainment helped him quickly advance through this glory-obsessed tribe, eventually challenging
+        his Jarl to a Holmgang and taking the Jarlship upon victory. He takes great joy and pride in commentating every
+        tournament.</p>
+
+      <h3 id='ormunda-drekisdottr'>Jarl Ormunda Drekisdottr</h3>
+      <p>Jarl Ormunda takes her name from a particularly odd legend of Uthgar, believed only by the Great Worm tribe:
+        That, in addition to slaying the Great Worm at the Spine Of The World, he mated with it. As the only Uthgardt
+        tribe with a single interrupted bloodline, Jarls of the Great Worm tribe proudly claim heritage from this
+        mating. Jarl Ormunda is a devout traditionalist, including and especially in the Great Worm Tribe&#39;s strange
+        and unique heritage. Though she is not much of a warrior herself, she is passionate in her defence of the Old
+        Ways.</p>
+
+      <h3 id='erlen-ornson'>Jarl Erlen Ornson</h3>
+      <p>Erlen is a Jarl with ambition. When the lucrative partnership between the Elk and Thunderbeast tribes began to
+        bare fruit, he read the writing on the wall and pledged his sword to the same cause as his fierce rivals. A
+        pragmatic and patient leader, he believes that the Griffon tribe&#39;s best days are ahead, and that once the
+        Uthgardt faith has been reformed they can once again be the major agricultural and economic force in the region.
+      </p>
 
     </section>
   </main>
