Add concept of apotheote

--- a/cosmology.html
+++ b/cosmology.html
@@ -139,7 +139,18 @@
               <img src="assets/cosmology/daemons/erodite.png" />
             </figure>
             <p>First of the three major love daemons, Erodite is manifest from raw sexual lust. Not greed, as with Avikath, just pure 
-              and simple animalistic lust. They are simply an urge.</p>      
+              and simple animalistic lust. They are simply an urge.</p>     
+            
+            <h2 id="apotheotes">Apotheotes</h2>
+            <p class="fullwidth">Sometimes, if a mortal being is so renowned that they are worshipped to the point of deification, a 
+              daemon manifests from the collective idea of them. Said daemon generally resembles the person, including their personality 
+              and memory. This process is called apotheosis, so these daemons are called apotheotes (singular: apotheote).</p>
+
+              <h3 id="uthgar">Uthgar</h3>
+              <p>Hero and namesake of the Uthgardt people, Uthgar was an immensely powerful warrior who helped bring an end to the megalithic 
+                age by slaughtering many of the megaliths still roaming the earth in his time. His daemon manifestation watches over the 
+                Uthgardt people, granting powers to those who gain his favour and imbuing relics from his mortal life with a fraction of his 
+                power.</p>
           </section>
     </main>
     
