--- a/people.html
+++ b/people.html
@@ -88,7 +88,8 @@
     <section class="wiki-page">
       <h1 id="uthgardt">Uthgardt</h1>
 
-      <h3 id='haesta-þrumsdottr'>Fylkir Hæesta Þrumsdottr</h3>
+      <h3 id='haesta-thrumsdottr'>Fylkir Hæesta Þrumsdottr</h3>
+      <figure class="splashimg"><img src="assets/people/uthgardt/haesta-thrumsdottr.png"></figure>
       <p>The Jarl of the Thunderbeast Tribe is a grim figure, rarely known to smile and certainly never to joke. Even as
         a child, she was strangely quiet and focussed, owing to much of the mythos surrounding her. While she is a
         capable warrior, her real strength lies in strategy: She always seems to be ten steps ahead of her enemy.
@@ -96,7 +97,8 @@
       </p>
 
       <h3 id='slasverd-af-fylkir'>Freyr Slásverd af Fylkir</h3>
-      <p>Few in the land can say a bad word about Fylkir Haesta’s choice of husband, which is in part why he is her
+      <figure class="splashimg"><img src="assets/people/uthgardt/slasverd-af-fylkir.png"></figure>
+      <p>Few in the land can say a bad word about Fylkir Haesta's choice of husband, which is in part why he is her
         choice of husband. This beloved prince of the Sky Pony tribe is a charming, handsome and courageous favourite
         among both his own people and his adopted Thunderbeast kinsmen. How exactly this shining beacon of charm and
         good will maintains a relationship with the grim, serious Fylkir is a mystery, but their union joins together
@@ -105,7 +107,7 @@
 
       <h3 id='vidar-norgandr'>Páfi Viðar Norgandr</h3>
       <figure class="splashimg"><img src="assets/people/uthgardt/vidar-norgandr.png"></figure>
-      <p>Of those who oppose Jarl Haesta&#39;s claim to the Fylkiriate, the most prominent is the Jarl of the Grey Wolf
+      <p>Of those who oppose Jarl Haesta's claim to the Fylkiriate, the most prominent is the Jarl of the Grey Wolf
         Tribe. Vidar is a vicious acolyte of the Old Ways and has more than earned his byname &quot;Norgandr&quot;
         (Beast Of The North). He believes that Uthgar is best revered by tribes adhering to the dogma of their totems,
         and that a central authority of the Uthgardt faith would fundamentally undermine its culture. A physically
@@ -113,6 +115,7 @@
         horses in wolf form.</p>
 
       <h3 id='flugmaer-hrafndottr'>Jarl Flugmær Hrafndottr</h3>
+      <figure class="splashimg"><img src="assets/people/uthgardt/flugmaer-hrafndottr.png"></figure>
       <p>Flugmaer excells at two things: Flying and drinking. A tremendously skilled pilot, she rose to the role of Jarl
         at a young age after her Father, Jarl Hrafn, was shot down by Neverwinter forces during a raid on an outlying
         village. Flugmaer is a firm friend of Jarl Vidar of the Grey Wolf tribe, both politically and personally. While
@@ -120,14 +123,16 @@
         of the Old Ways, their romantic (or, at least, sexual) relationship is no secret.</p>
 
       <h3 id='örmar-silfurorð'>Jarl Örmar Silfurorð</h3>
-      <p>One of the lesser known Uthgardt traditions is the sport of &quot;flyting&quot;, in which participants take
+      <figure class="splashimg"><img src="assets/people/uthgardt/ormar-silfurord.png"></figure>
+      <p>One of the lesser known Uthgardt traditions is the sport of "flyting", in which participants take
         turns exchnging insults and personal jabs until one person surrenders. While there are certainly Uthgardt who
         surpass Jarl Örmar in physical strength, they are absolutely unrivalled at flyting. Their keen gaze and cutting
         wit can reduce even the burliest of bruisers to tears in a matter of minutes. While they acknowledge and offer
-        some support for Jarl Haesta&#39;s claim to the Fylkiriate, they have thus far held themselves back from any
+        some support for Jarl Haesta's claim to the Fylkiriate, they have thus far held themselves back from any
         major military maneuvers, exercising their influence slowly and strategically.</p>
 
       <h3 id='veida-vikinginn'>Jarl Veida Vikinginn</h3>
+      <figure class="splashimg"><img src="assets/people/uthgardt/veida-vikinginn.png"></figure>
       <p>When tucking their children into beds at night, parents along the Sword Coast tell their children stories of
         the fearsom Viking queen. Her red hair like fire, the scar running down the length of her face, her utter
         ruthlessness and lack of a moral compass. In truth, Veida is a fairly personable and honourable sort, who sees
@@ -153,7 +158,7 @@
       <h3 id='thraell-svikari'>Jarl Thraell Svikari</h3>
       <p>Jarl Thraell first came to the Uthgardt lands as a prisoner, but after winning his tournament fight he earned
         membership of the Sky Pony tribe. Those who were there remember a spectacular fight in which the charming,
-        skillful Chondothan captive danced rings around his opponents and left no survivors. Thraell’s talent for
+        skillful Chondothan captive danced rings around his opponents and left no survivors. Thraell's talent for
         spectacle and entertainment helped him quickly advance through this glory-obsessed tribe, eventually challenging
         his Jarl to a Holmgang and taking the Jarlship upon victory. He takes great joy and pride in commentating every
         tournament.</p>
@@ -162,14 +167,14 @@
       <p>Jarl Ormunda takes her name from a particularly odd legend of Uthgar, believed only by the Great Worm tribe:
         That, in addition to slaying the Great Worm at the Spine Of The World, he mated with it. As the only Uthgardt
         tribe with a single interrupted bloodline, Jarls of the Great Worm tribe proudly claim heritage from this
-        mating. Jarl Ormunda is a devout traditionalist, including and especially in the Great Worm Tribe&#39;s strange
+        mating. Jarl Ormunda is a devout traditionalist, including and especially in the Great Worm Tribe's strange
         and unique heritage. Though she is not much of a warrior herself, she is passionate in her defence of the Old
         Ways.</p>
 
       <h3 id='erlen-ornson'>Jarl Erlen Ornson</h3>
       <p>Erlen is a Jarl with ambition. When the lucrative partnership between the Elk and Thunderbeast tribes began to
         bare fruit, he read the writing on the wall and pledged his sword to the same cause as his fierce rivals. A
-        pragmatic and patient leader, he believes that the Griffon tribe&#39;s best days are ahead, and that once the
+        pragmatic and patient leader, he believes that the Griffon tribe's best days are ahead, and that once the
         Uthgardt faith has been reformed they can once again be the major agricultural and economic force in the region.
       </p>
 
