--- a/template.html
+++ b/template.html
@@ -9,15 +9,15 @@
 <body>
 
     <header id="home-page-header">
-        <h1><a href="index">Iuncterra</a></h1>
+        <h1><a href="{{root}}">Iuncterra</a></h1>
         <h3 class=sub><a class=ipa>iʌŋktɛræ</a></h3>
 
         <nav>
-            <a href="locations">Locations</a>
-            <a href="organisations">Organisations</a>
-            <a href="cosmology">Cosmology</a>
-            <a href="species">Species'</a>
-            <a href="people">People</a>
+            <a href="{{root}}/Locations">Locations</a>
+            <a href="{{root}}/Organisations">Organisations</a>
+            <a href="{{root}}/Cosmology">Cosmology</a>
+            <a href="{{root}}/Species">Species'</a>
+            <a href="{{root}}/People">People</a>
         </nav>
     </header>
 
