--- a/template.html
+++ b/template.html
@@ -24,6 +24,7 @@
     <main>
         <section class="wiki-page">
             {{content}}
+            {{breadcrumbs}}
         </section>
     </main>
 
