Apostrophe on Species'

--- a/template.html
+++ b/template.html
@@ -16,7 +16,7 @@
             <a href="{{root}}/Locations">Locations</a>
             <a href="{{root}}/Organisations">Organisations</a>
             <a href="{{root}}/Cosmology">Cosmology</a>
-            <a href="{{root}}/Species">Species'</a>
+            <a href="{{root}}/Species">Species</a>
             <a href="{{root}}/People">People</a>
         </nav>
     </header>
