Add favicon and tab title

--- a/template.html
+++ b/template.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-16" />
-    <title>Iuncterra</title>
+    <title>{{stem}}</title>
+    <link rel="icon" type="image/x-icon" href="{{style}}/favicon.png">
     <link rel="stylesheet" href="{{style}}/stylesheet.css" type="text/css" />
     <link rel="stylesheet" href="{{style}}/torillic.css" type="text/css" />
     <script src="{{utils}}/maps.js"></script>
