New structure using markmoji syntax for contents

--- a/source/_templates/html/home.html
+++ b/source/_templates/html/home.html
@@ -14,11 +14,8 @@
     </header>
 
     <main>
-        <section class="wiki-homepage">
+        <section class="wiki-page">
             {{content}}
-        </section>
-        <section class="wiki-contents-array">
-            {{contents}}
         </section>
     </main>
 
